--- a/index.html
+++ b/index.html
@@ -27,23 +27,23 @@
         </div>
 
         <div class="quotes2">
-            <a href="https://oguser.com/Ambush" target="_blank">OGU: @Ambush</a>
-        </div>
-
-        <div class="quotes3">
             <a href="https://discord.com/users/346043313670848514" target="_blank">Discord: @Ambushing</a>
         </div>
 
-        <div class="quotes4">
+        <div class="quotes3">
             <a href="https://t.me/Zaxbys" target="_blank">Telegram: @Zaxbys</a>
         </div>
 
+        <div class="quotes4">
+            <a href="https://x.com/Batarang" target="_blank">Twitter: @Batarang</a>
+        </div>
+
         <div class="quotes5">
-            <a href="https://namemc.com/profile/Manticore.1" target="_blank">Minecraft: @Manticore</a>
+            <a href="https://www.tiktok.com/@Cyclops" target="_blank">TikTok: @Cyclops</a>
         </div>
 
         <div class="quotes6">
-            <a href="https://www.tiktok.com/@Cyclops" target="_blank">TikTok: @Cyclops</a>
+            <a href="https://github.com/Scarecrow" target="_blank">GitHub: @Scarecrow</a>
         </div>
 
         <script>
