--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         </div>
 
         <div class="quotes3">
-            <a href="https://t.me/Zaxbys" target="_blank">Telegram: @Zaxbys</a>
+            <a href="https://t.me/DocOck" target="_blank">Telegram: @DocOck</a>
         </div>
 
         <div class="quotes4">
